Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62667

Websockets do not disconnect signals correctly on abort

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.8
    • 5.9.1
    • WebSockets
    • None
    • dad63663fcc6590353ec426337b0126b967da173

      I have a situation where I'm calling abort on a websocket and then attempting to open a connection again. Sometimes it gets stuck and doesn't reconnect properly, my investigation shows that the signals from the previous QTcpSocket were not disconnected from QWebSocketPrivate::processStateChanged leading to confusion.

      I don't have example code to reproduce this handy because it requires a custom server and client and is slightly timing dependent. However https://codereview.qt-project.org/#/c/203110/ and http://doc.qt.io/qt-5/qobject.html#disconnect-3 combined make the issue fairly evident.

        For Gerrit Dashboard: QTBUG-62667
        # Subject Branch Project Status CR V

            aalpert Alan Alpert
            aalpert Alan Alpert
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes