Fix releaseConnections

The overload selected when you pass a single object pointer is to
disconnect all signals with that object as a receiver. We want to
disconnect all signals with that object as a sender, which is done most
easily by passing no explicit arguments.

Task-number: QTBUG-62667
Change-Id: I3dd9c5aced9160510bff527355ecfbedded690aa
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Jesus Fernandez <Jesus.Fernandez@qt.io>
Reviewed-by: Romain Pokrzywka <romain.pokrzywka@gmail.com>
Reviewed-by: Liang Qi <liang.qi@qt.io>